--- a/TensorFlow/4_Tensor_Flow_Android_Mobile/Android/app/src/main/res/values/strings.xml
+++ b/TensorFlow/4_Tensor_Flow_Android_Mobile/Android/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">LinearRegressionAndroid</string>
+    <string name="edit_number">Enter a Number</string>
+    <string name="text_view_string">Output</string>
+
 </resources>
