--- a/TensorFlow/7_Tensor_Flow_Android_Mobile_TexT_Predict/Android/app/src/main/res/values/strings.xml
+++ b/TensorFlow/7_Tensor_Flow_Android_Mobile_TexT_Predict/Android/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">My Application</string>
+    <string name="edit_text_hint">Enter string to predict</string>
+    <string name="button_text">Predict next word</string>
+    <string name="results_text">Display results here</string>
 </resources>
