--- a/TensorFlow/8_Tensor_Flow_Android_Mobile_Predict_Stock/Android/app/src/main/res/values/strings.xml
+++ b/TensorFlow/8_Tensor_Flow_Android_Mobile_Predict_Stock/Android/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">My Application</string>
+    <string name="stock_symbol_hint">Stock symbol here</string>
+    <string name="start_date_hint">Start date here</string>
+    <string name="end_date_hint">End date here</string>
+    <string name="button_text">Predict</string>
+    <string name="results_text">Results here</string>
 </resources>
