--- a/3_Machine_Learning/10_MultipleRegression/MultiRegression.ipynb
+++ b/3_Machine_Learning/10_MultipleRegression/MultiRegression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
        "(506, 13)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1313,7 +1313,7 @@
        "[506 rows x 14 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1324,7 +1324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1402,7 +1402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1411,7 +1411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1420,7 +1420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1438,10 +1438,10 @@
        "  <th>Method:</th>             <td>Least Squares</td>  <th>  F-statistic:       </th> <td>   108.1</td> \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Date:</th>             <td>Wed, 21 Nov 2018</td> <th>  Prob (F-statistic):</th> <td>6.72e-135</td>\n",
+       "  <th>Date:</th>             <td>Thu, 22 Nov 2018</td> <th>  Prob (F-statistic):</th> <td>6.72e-135</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>21:52:20</td>     <th>  Log-Likelihood:    </th> <td> -1498.8</td> \n",
+       "  <th>Time:</th>                 <td>13:35:47</td>     <th>  Log-Likelihood:    </th> <td> -1498.8</td> \n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>      <td>   506</td>      <th>  AIC:               </th> <td>   3026.</td> \n",
@@ -1526,8 +1526,8 @@
        "Dep. Variable:                      y   R-squared:                       0.741\n",
        "Model:                            OLS   Adj. R-squared:                  0.734\n",
        "Method:                 Least Squares   F-statistic:                     108.1\n",
-       "Date:                Wed, 21 Nov 2018   Prob (F-statistic):          6.72e-135\n",
-       "Time:                        21:52:20   Log-Likelihood:                -1498.8\n",
+       "Date:                Thu, 22 Nov 2018   Prob (F-statistic):          6.72e-135\n",
+       "Time:                        13:35:47   Log-Likelihood:                -1498.8\n",
        "No. Observations:                 506   AIC:                             3026.\n",
        "Df Residuals:                     492   BIC:                             3085.\n",
        "Df Model:                          13                                         \n",
@@ -1563,7 +1563,7 @@
        "\"\"\""
       ]
      },
-     "execution_count": 26,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1571,6 +1571,146 @@
    "source": [
     "lr.summary()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"simpletable\">\n",
+       "<caption>OLS Regression Results</caption>\n",
+       "<tr>\n",
+       "  <th>Dep. Variable:</th>            <td>y</td>        <th>  R-squared:         </th> <td>   0.587</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Model:</th>                   <td>OLS</td>       <th>  Adj. R-squared:    </th> <td>   0.582</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Method:</th>             <td>Least Squares</td>  <th>  F-statistic:       </th> <td>   118.4</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Date:</th>             <td>Thu, 22 Nov 2018</td> <th>  Prob (F-statistic):</th> <td>1.32e-92</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Time:</th>                 <td>13:42:40</td>     <th>  Log-Likelihood:    </th> <td> -1616.3</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>No. Observations:</th>      <td>   506</td>      <th>  AIC:               </th> <td>   3247.</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Df Residuals:</th>          <td>   499</td>      <th>  BIC:               </th> <td>   3276.</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Df Model:</th>              <td>     6</td>      <th>                     </th>     <td> </td>   \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Covariance Type:</th>      <td>nonrobust</td>    <th>                     </th>     <td> </td>   \n",
+       "</tr>\n",
+       "</table>\n",
+       "<table class=\"simpletable\">\n",
+       "<tr>\n",
+       "      <td></td>         <th>coef</th>     <th>std err</th>      <th>t</th>      <th>P>|t|</th>  <th>[0.025</th>    <th>0.975]</th>  \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Intercept</th> <td>  -17.9546</td> <td>    3.214</td> <td>   -5.587</td> <td> 0.000</td> <td>  -24.269</td> <td>  -11.640</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>CRIM</th>      <td>   -0.1769</td> <td>    0.035</td> <td>   -5.114</td> <td> 0.000</td> <td>   -0.245</td> <td>   -0.109</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>ZN</th>        <td>    0.0213</td> <td>    0.014</td> <td>    1.537</td> <td> 0.125</td> <td>   -0.006</td> <td>    0.048</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>INDUS</th>     <td>   -0.1437</td> <td>    0.064</td> <td>   -2.247</td> <td> 0.025</td> <td>   -0.269</td> <td>   -0.018</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>CHAS</th>      <td>    4.7847</td> <td>    1.059</td> <td>    4.518</td> <td> 0.000</td> <td>    2.704</td> <td>    6.866</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>NOX</th>       <td>   -7.1849</td> <td>    3.694</td> <td>   -1.945</td> <td> 0.052</td> <td>  -14.442</td> <td>    0.072</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>RM</th>        <td>    7.3416</td> <td>    0.417</td> <td>   17.597</td> <td> 0.000</td> <td>    6.522</td> <td>    8.161</td>\n",
+       "</tr>\n",
+       "</table>\n",
+       "<table class=\"simpletable\">\n",
+       "<tr>\n",
+       "  <th>Omnibus:</th>       <td>218.887</td> <th>  Durbin-Watson:     </th> <td>   0.850</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Prob(Omnibus):</th> <td> 0.000</td>  <th>  Jarque-Bera (JB):  </th> <td>1532.877</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Skew:</th>          <td> 1.738</td>  <th>  Prob(JB):          </th> <td>    0.00</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Kurtosis:</th>      <td>10.786</td>  <th>  Cond. No.          </th> <td>    420.</td>\n",
+       "</tr>\n",
+       "</table><br/><br/>Warnings:<br/>[1] Standard Errors assume that the covariance matrix of the errors is correctly specified."
+      ],
+      "text/plain": [
+       "<class 'statsmodels.iolib.summary.Summary'>\n",
+       "\"\"\"\n",
+       "                            OLS Regression Results                            \n",
+       "==============================================================================\n",
+       "Dep. Variable:                      y   R-squared:                       0.587\n",
+       "Model:                            OLS   Adj. R-squared:                  0.582\n",
+       "Method:                 Least Squares   F-statistic:                     118.4\n",
+       "Date:                Thu, 22 Nov 2018   Prob (F-statistic):           1.32e-92\n",
+       "Time:                        13:42:40   Log-Likelihood:                -1616.3\n",
+       "No. Observations:                 506   AIC:                             3247.\n",
+       "Df Residuals:                     499   BIC:                             3276.\n",
+       "Df Model:                           6                                         \n",
+       "Covariance Type:            nonrobust                                         \n",
+       "==============================================================================\n",
+       "                 coef    std err          t      P>|t|      [0.025      0.975]\n",
+       "------------------------------------------------------------------------------\n",
+       "Intercept    -17.9546      3.214     -5.587      0.000     -24.269     -11.640\n",
+       "CRIM          -0.1769      0.035     -5.114      0.000      -0.245      -0.109\n",
+       "ZN             0.0213      0.014      1.537      0.125      -0.006       0.048\n",
+       "INDUS         -0.1437      0.064     -2.247      0.025      -0.269      -0.018\n",
+       "CHAS           4.7847      1.059      4.518      0.000       2.704       6.866\n",
+       "NOX           -7.1849      3.694     -1.945      0.052     -14.442       0.072\n",
+       "RM             7.3416      0.417     17.597      0.000       6.522       8.161\n",
+       "==============================================================================\n",
+       "Omnibus:                      218.887   Durbin-Watson:                   0.850\n",
+       "Prob(Omnibus):                  0.000   Jarque-Bera (JB):             1532.877\n",
+       "Skew:                           1.738   Prob(JB):                         0.00\n",
+       "Kurtosis:                      10.786   Cond. No.                         420.\n",
+       "==============================================================================\n",
+       "\n",
+       "Warnings:\n",
+       "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
+       "\"\"\""
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "form_lr = smf.ols(formula='y ~ CRIM + ZN + INDUS + CHAS + NOX +  RM', data=df)\n",
+    "mlr = form_lr.fit()\n",
+    "mlr.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
