--- a/5_Machine_Learning_Project/2_Fashin_design/Fashion MNIST.ipynb
+++ b/5_Machine_Learning_Project/2_Fashin_design/Fashion MNIST.ipynb
@@ -4,8 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# CASE STUDY: FASHION CLASS CLASSIFICATION \n",
-    "# Dr. Ryan Ahmed"
+    "# CASE STUDY: FASHION CLASS CLASSIF"
    ]
   },
   {
@@ -525,7 +524,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.7"
   },
   "varInspector": {
    "cols": {
