--- a/7_nlp_python/12_VisualizationNameEntity/NameEntityVisualization.ipynb
+++ b/7_nlp_python/12_VisualizationNameEntity/NameEntityVisualization.ipynb
@@ -195,7 +195,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\avinash.t\\Anaconda3\\lib\\runpy.py:193: UserWarning: [W006] No entities to visualize found in Doc object. If this is surprising to you, make sure the Doc was processed using a model that supports named entity recognition, and check the `doc.ents` property manually if necessary.\n",
+      "C:\\Users\\avinash.tiwari\\AppData\\Local\\Continuum\\anaconda3\\envs\\nlp_course\\lib\\runpy.py:193: UserWarning: [W006] No entities to visualize found in Doc object. If this is surprising to you, make sure the Doc was processed using a model that supports named entity recognition, and check the `doc.ents` property manually if necessary.\n",
       "  \"__main__\", mod_spec)\n"
      ]
     },
@@ -360,7 +360,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\avinash.t\\Anaconda3\\lib\\runpy.py:193: UserWarning: [W011] It looks like you're calling displacy.serve from within a Jupyter notebook or a similar environment. This likely means you're already running a local web server, so there's no need to make displaCy start another one. Instead, you should be able to replace displacy.serve with displacy.render to show the visualization.\n",
+      "C:\\Users\\avinash.tiwari\\AppData\\Local\\Continuum\\anaconda3\\envs\\nlp_course\\lib\\runpy.py:193: UserWarning: [W011] It looks like you're calling displacy.serve from within a Jupyter notebook or a similar environment. This likely means you're already running a local web server, so there's no need to make displaCy start another one. Instead, you should be able to replace displacy.serve with displacy.render to show the visualization.\n",
       "  \"__main__\", mod_spec)\n"
      ]
     },
@@ -423,6 +423,27 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -441,7 +462,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
